--- a/style/css/main.css
+++ b/style/css/main.css
@@ -192,23 +192,71 @@ section {
           font-size: 14px;
           margin-bottom: 5px; } }
 
+.announcement {
+  background-image: linear-gradient(rgba(29, 28, 81, 0.7), rgba(29, 28, 81, 0.7)), url("https://github.com/sofiarnunes/Halls-360Project/blob/main/img/Background_update.png?raw=true");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  text-align: center; }
+  .announcement .wrapper {
+    position: relative;
+    top: 50%;
+    margin: 0 auto;
+    max-width: 100%; }
+    .announcement .wrapper .win h3 {
+      font-size: 50px;
+      font-weight: 700;
+      color: #ffffff;
+      margin-bottom: 5px; }
+    .announcement .wrapper .win h4 {
+      font-size: 39px;
+      font-weight: 400;
+      color: #ffffff;
+      letter-spacing: 2px; }
+    .announcement .wrapper .cravas img {
+      width: 300px;
+      margin-top: 30px; }
+    .announcement .wrapper .arrow i {
+      color: #ffffff;
+      font-size: 30px; }
+
 .prize {
   background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
   height: 100vh; }
+  @media (min-width: 0) and (max-width: 512px) {
+    .prize {
+      background: linear-gradient(180deg, #000336 25%, #3b8ccc 99%); } }
   .prize .wrapper {
     max-width: 1100px;
     height: 100vh; }
+    @media (min-width: 0) and (max-width: 512px) {
+      .prize .wrapper {
+        max-width: 100%;
+        overflow: hidden;
+        height: 1000px; } }
     .prize .wrapper .flex-container {
       padding-top: 70px;
       width: 100%; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .prize .wrapper .flex-container {
+          flex-direction: column; } }
       .prize .wrapper .flex-container .prizes {
         width: 420px;
         height: 420px;
         position: relative;
         bottom: 15px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container .prizes {
+            width: 300px;
+            height: 300px; } }
         .prize .wrapper .flex-container .prizes img {
           width: 170px;
           position: absolute; }
+          @media (min-width: 0) and (max-width: 512px) {
+            .prize .wrapper .flex-container .prizes img {
+              width: 120px; } }
           .prize .wrapper .flex-container .prizes img.top {
             top: 0;
             left: 50%;
@@ -229,8 +277,15 @@ section {
         font-size: 80px;
         font-weight: 700;
         color: #ffffff; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container div h3 {
+            font-size: 40px;
+            font-weight: 400; } }
       .prize .wrapper .flex-container .professional img {
         width: 430px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container .professional img {
+            display: none; } }
     .prize .wrapper .flex-container {
       width: 100%;
       text-align: center;
@@ -242,8 +297,25 @@ section {
           font-size: 20px;
           font-weight: 700;
           color: #ffffff; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .prize .wrapper .flex-container .text-1 {
+          position: absolute;
+          bottom: -50px; } }
+      @media (min-width: 0) and (max-width: 512px) {
+        .prize .wrapper .flex-container .text-1 p {
+          font-size: 14px;
+          font-weight: 400; } }
       .prize .wrapper .flex-container .text-2 {
         margin-top: -50px; }
+        .prize .wrapper .flex-container .text-2 span {
+          font-weight: 600; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container .text-2 {
+            max-width: 290px; } }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container .text-2 p {
+            font-size: 14px;
+            font-weight: 400; } }
 
 .about {
   width: 100%;
