--- a/scss/_announc.scss
+++ b/scss/_announc.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     text-align: center;
+    display:none;
     .wrapper{
         position: relative;
         top: 50%;
