--- a/scss/_announc.scss
+++ b/scss/_announc.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     text-align: center;
+    display:none;
     @include mq(0,512px){
         background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
         width: 100%;
