--- a/style/css/main.css
+++ b/style/css/main.css
@@ -205,7 +205,8 @@ section {
   background-position: center;
   width: 100%;
   height: 100vh;
-  text-align: center; }
+  text-align: center;
+  display: none; }
   @media (min-width: 0) and (max-width: 512px) {
     .announcement {
       background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
@@ -253,7 +254,8 @@ section {
 
 .prize {
   background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
-  height: 100vh; }
+  height: 100vh;
+  display: none; }
   @media (min-width: 0) and (max-width: 512px) {
     .prize {
       background: linear-gradient(180deg, #010f45 25%, #3b8ccc 99%);
