--- a/style/css/main.css
+++ b/style/css/main.css
@@ -211,7 +211,8 @@ section {
     .announcement {
       background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
       width: 100%;
-      overflow: hidden; } }
+      overflow: hidden;
+      height: 100vh; } }
   .announcement .wrapper {
     position: relative;
     top: 50%;
@@ -219,7 +220,7 @@ section {
     max-width: 100%; }
     @media (min-width: 0) and (max-width: 512px) {
       .announcement .wrapper {
-        top: 43%; } }
+        top: 40%; } }
     .announcement .wrapper .win h3 {
       font-size: 50px;
       font-weight: 700;
@@ -239,8 +240,8 @@ section {
       margin-top: 30px; }
       @media (min-width: 0) and (max-width: 512px) {
         .announcement .wrapper .cravas img {
-          width: 340px;
-          margin-top: 20%; } }
+          width: 300px;
+          margin-top: 10%; } }
     .announcement .wrapper .arrow i {
       color: #ffffff;
       font-size: 30px; }
@@ -250,7 +251,7 @@ section {
     @media (min-width: 0) and (max-width: 512px) {
       .announcement .wrapper .arrow {
         position: relative;
-        top: 7%; } }
+        top: 10%; } }
 
 .prize {
   background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
@@ -268,14 +269,18 @@ section {
     @media (min-width: 0) and (max-width: 512px) {
       .prize .wrapper {
         max-width: 340px;
-        height: 1000px; } }
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center; } }
     .prize .wrapper .text-mobile {
       text-align: center;
       display: none; }
       @media (min-width: 0) and (max-width: 512px) {
         .prize .wrapper .text-mobile {
-          display: block;
-          margin-top: 50px; } }
+          display: block; } }
       @media (min-width: 0) and (max-width: 512px) {
         .prize .wrapper .text-mobile p {
           font-size: 14px;
@@ -288,7 +293,6 @@ section {
       @media (min-width: 0) and (max-width: 512px) {
         .prize .wrapper .flex-container {
           flex-direction: column;
-          margin-top: 60px;
           padding-top: 0; } }
       .prize .wrapper .flex-container .prizes {
         width: 420px;
@@ -297,8 +301,8 @@ section {
         bottom: 15px; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .prizes {
-            width: 340px;
-            height: 340px; } }
+            width: 330px;
+            height: 330px; } }
         .prize .wrapper .flex-container .prizes img {
           width: 170px;
           position: absolute; }
@@ -329,8 +333,7 @@ section {
           .prize .wrapper .flex-container div h3 {
             font-size: 40px;
             font-weight: 400;
-            margin-top: 40px;
-            margin-bottom: 40px; } }
+            height: 100%; } }
       .prize .wrapper .flex-container .professional img {
         width: 430px; }
         @media (min-width: 0) and (max-width: 512px) {
@@ -381,7 +384,7 @@ section {
           font-size: 14px;
           font-weight: 700;
           line-height: 17px;
-          margin-top: 30px; } }
+          left: 30%; } }
 
 .about {
   width: 100%;
@@ -553,7 +556,7 @@ footer {
     @media (min-width: 0) and (max-width: 512px) {
       footer .flex-container div ul {
         position: relative;
-        left: 100%; } }
+        left: 80%; } }
     @media (min-width: 0) and (max-width: 512px) {
       footer .flex-container div ul .logo {
         display: none; } }
