--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -140,10 +140,16 @@
             }
         }
         .mundo{
+            position: absolute;         
+            left: 50%;
+            transform: translateX(-50%);
             p{
+                color: $white;
+                font-size: 30px;
+                max-width: 100%;
+                margin-top: 130px;
                 @include mq(0,512px){
                     font-size: 20px;
-                    color: $white;
                     width: 200px;
                     position: relative;         
                     left: 50%;
@@ -153,6 +159,10 @@
                 }
             }
             .btn{
+                position: relative;         
+                left: 60px;
+                margin-top: 20px;
+                // transform: translsateX(-50%);
                 @include mq(0,512px){
                     padding: 15px 50px;
                     border-radius: 15px;
