--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -21,9 +21,15 @@ section {
 }
 
 .btn{
-    padding: 10px 20px;
+    font-size: 20px;
     background-color: $crava-light;
-    border-radius: 10px;
     color: $white;
+    border-radius: 15px;
+    padding: 20px 60px;
+    font-weight: 700;
+    @include mq(0,512px){
+        font-size: 14px;
+        padding: 10px 20px;
+        border-radius: 10px;
+    }
 }
-// jah
