--- a/style/css/main.css
+++ b/style/css/main.css
@@ -73,10 +73,17 @@ section {
   flex-wrap: wrap; }
 
 .btn {
-  padding: 10px 20px;
+  font-size: 20px;
   background-color: #FF538F;
-  border-radius: 10px;
-  color: #ffffff; }
+  color: #ffffff;
+  border-radius: 15px;
+  padding: 20px 60px;
+  font-weight: 700; }
+  @media (min-width: 0) and (max-width: 512px) {
+    .btn {
+      font-size: 14px;
+      padding: 10px 20px;
+      border-radius: 10px; } }
 
 .hero {
   background-image: linear-gradient(rgba(29, 28, 81, 0.7), rgba(29, 28, 81, 0.7)), url("https://github.com/sofiarnunes/Halls-360Project/blob/main/img/Background_update.png?raw=true");
@@ -516,20 +523,32 @@ section {
         @media (min-width: 0) and (max-width: 512px) {
           .about .wrapper .flex-container.rev {
             margin-right: 0px; } }
-    @media (min-width: 0) and (max-width: 512px) {
+    .about .wrapper .mundo {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%); }
       .about .wrapper .mundo p {
-        font-size: 20px;
         color: #ffffff;
-        width: 200px;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        margin-bottom: 40px;
-        line-height: 25px; } }
-    @media (min-width: 0) and (max-width: 512px) {
+        font-size: 30px;
+        max-width: 100%;
+        margin-top: 130px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .about .wrapper .mundo p {
+            font-size: 20px;
+            width: 200px;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-bottom: 40px;
+            line-height: 25px; } }
       .about .wrapper .mundo .btn {
-        padding: 15px 50px;
-        border-radius: 15px; } }
+        position: relative;
+        left: 60px;
+        margin-top: 20px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .about .wrapper .mundo .btn {
+            padding: 15px 50px;
+            border-radius: 15px; } }
 
 footer {
   height: 105px;
@@ -542,13 +561,15 @@ footer {
     footer {
       height: 200px;
       width: 100%; } }
-  @media (min-width: 0) and (max-width: 512px) {
-    footer .logo-mobile img {
-      height: 100px;
-      position: absolute;
-      top: 10%;
-      right: 50%;
-      transform: translateX(-50%); } }
+  footer .logo-mobile img {
+    display: none; }
+    @media (min-width: 0) and (max-width: 512px) {
+      footer .logo-mobile img {
+        height: 100px;
+        position: absolute;
+        top: 10%;
+        right: 50%;
+        transform: translateX(-50%); } }
   footer .flex-container {
     margin-top: 2px; }
     @media (min-width: 0) and (max-width: 512px) {
