--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -147,7 +147,7 @@
                 color: $white;
                 font-size: 30px;
                 max-width: 100%;
-                margin-top: 130px;
+                margin-top: 160px;
                 @include mq(0,512px){
                     font-size: 20px;
                     width: 200px;
@@ -161,7 +161,7 @@
             .btn{
                 position: relative;         
                 left: 60px;
-                margin-top: 20px;
+                top: 40px;
                 // transform: translsateX(-50%);
                 @include mq(0,512px){
                     padding: 15px 50px;
