--- a/style/css/main.css
+++ b/style/css/main.css
@@ -531,7 +531,7 @@ section {
         color: #ffffff;
         font-size: 30px;
         max-width: 100%;
-        margin-top: 130px; }
+        margin-top: 160px; }
         @media (min-width: 0) and (max-width: 512px) {
           .about .wrapper .mundo p {
             font-size: 20px;
@@ -544,7 +544,7 @@ section {
       .about .wrapper .mundo .btn {
         position: relative;
         left: 60px;
-        margin-top: 20px; }
+        top: 40px; }
         @media (min-width: 0) and (max-width: 512px) {
           .about .wrapper .mundo .btn {
             padding: 15px 50px;
