--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -27,6 +27,9 @@ section {
     border-radius: 15px;
     padding: 20px 60px;
     font-weight: 700;
+    &:hover{
+        background-color: $crava;
+    }
     @include mq(0,512px){
         font-size: 14px;
         padding: 10px 20px;
