--- a/style/css/main.css
+++ b/style/css/main.css
@@ -79,6 +79,8 @@ section {
   border-radius: 15px;
   padding: 20px 60px;
   font-weight: 700; }
+  .btn:hover {
+    background-color: #FF1B6A; }
   @media (min-width: 0) and (max-width: 512px) {
     .btn {
       font-size: 14px;
@@ -540,7 +542,8 @@ section {
             left: 50%;
             transform: translateX(-50%);
             margin-bottom: 40px;
-            line-height: 25px; } }
+            line-height: 25px;
+            margin-top: 20px; } }
       .about .wrapper .mundo .btn {
         position: relative;
         left: 60px;
@@ -548,7 +551,9 @@ section {
         @media (min-width: 0) and (max-width: 512px) {
           .about .wrapper .mundo .btn {
             padding: 15px 50px;
-            border-radius: 15px; } }
+            border-radius: 15px;
+            left: 0;
+            top: -10px; } }
 
 footer {
   height: 105px;
@@ -565,6 +570,7 @@ footer {
     display: none; }
     @media (min-width: 0) and (max-width: 512px) {
       footer .logo-mobile img {
+        display: block;
         height: 100px;
         position: absolute;
         top: 10%;
