--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -27,6 +27,7 @@ section {
     border-radius: 15px;
     padding: 20px 60px;
     font-weight: 700;
+    transition: all 0.2s;
     &:hover{
         background-color: $crava;
     }
