--- a/style/css/main.css
+++ b/style/css/main.css
@@ -78,7 +78,8 @@ section {
   color: #ffffff;
   border-radius: 15px;
   padding: 20px 60px;
-  font-weight: 700; }
+  font-weight: 700;
+  transition: all 0.2s; }
   .btn:hover {
     background-color: #FF1B6A; }
   @media (min-width: 0) and (max-width: 512px) {
@@ -256,7 +257,10 @@ section {
           margin-top: 10%; } }
     .announcement .wrapper .arrow i {
       color: #ffffff;
-      font-size: 30px; }
+      font-size: 30px;
+      transition: all 0.2s; }
+      .announcement .wrapper .arrow i:hover {
+        color: #4AACE4; }
       @media (min-width: 0) and (max-width: 512px) {
         .announcement .wrapper .arrow i {
           font-size: 40px; } }
@@ -317,7 +321,10 @@ section {
             height: 330px; } }
         .prize .wrapper .flex-container .prizes img {
           width: 170px;
-          position: absolute; }
+          position: absolute;
+          transition: all 0.2s; }
+          .prize .wrapper .flex-container .prizes img:hover {
+            width: 185px; }
           @media (min-width: 0) and (max-width: 512px) {
             .prize .wrapper .flex-container .prizes img {
               width: 140px; } }
@@ -340,26 +347,31 @@ section {
       .prize .wrapper .flex-container div h3 {
         font-size: 80px;
         font-weight: 700;
-        color: #ffffff; }
+        color: #ffffff;
+        padding: 0 50px; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container div h3 {
             font-size: 40px;
             font-weight: 400;
-            height: 100%; } }
+            height: 100%;
+            padding: 0; } }
       .prize .wrapper .flex-container .professional img {
-        width: 430px; }
+        width: 430px;
+        transition: all 0.2s; }
+        .prize .wrapper .flex-container .professional img:hover {
+          opacity: 0.8; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .professional img {
             display: none; } }
     .prize .wrapper .flex-container {
-      width: 100%;
+      max-width: 100%;
       text-align: center;
       justify-content: center; }
       @media (min-width: 0) and (max-width: 512px) {
         .prize .wrapper .flex-container {
           flex-direction: column; } }
       .prize .wrapper .flex-container .text-1, .prize .wrapper .flex-container .text-2 {
-        width: 420px;
+        max-width: 420px;
         margin-top: -70px; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .text-1, .prize .wrapper .flex-container .text-2 {
@@ -372,17 +384,22 @@ section {
             .prize .wrapper .flex-container .text-1 p, .prize .wrapper .flex-container .text-2 p {
               font-size: 14px;
               font-weight: 400; } }
-      @media (min-width: 0) and (max-width: 512px) {
-        .prize .wrapper .flex-container .text-1 {
-          display: none; } }
+      .prize .wrapper .flex-container .text-1 {
+        margin-right: 180px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .prize .wrapper .flex-container .text-1 {
+            display: none;
+            margin-right: 0; } }
       .prize .wrapper .flex-container .text-2 {
-        margin-top: -50px; }
+        margin-top: -50px;
+        margin-left: 70px; }
         .prize .wrapper .flex-container .text-2 span {
           font-weight: 600; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .text-2 p {
             font-size: 14px;
-            font-weight: 400; } }
+            font-weight: 400;
+            margin-left: 0; } }
     .prize .wrapper .btn {
       display: none;
       text-align: center;
@@ -418,7 +435,7 @@ section {
         max-width: 340px !important; } }
     .about .wrapper h2 {
       text-align: center;
-      font-size: 90px;
+      font-size: 80px;
       font-weight: 700;
       color: #ffffff;
       margin-bottom: 18px;
@@ -436,7 +453,7 @@ section {
           transform: translateX(-50%); } }
     .about .wrapper .sub {
       text-align: center;
-      font-size: 18px;
+      font-size: 25px;
       color: #ffffff;
       margin-bottom: 70px;
       width: 973px;
