--- a/style/css/main.css
+++ b/style/css/main.css
@@ -375,7 +375,7 @@ section {
         margin-top: -70px; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .text-1, .prize .wrapper .flex-container .text-2 {
-            max-width: 300px; } }
+            width: 300px; } }
         .prize .wrapper .flex-container .text-1 p, .prize .wrapper .flex-container .text-2 p {
           font-size: 20px;
           font-weight: 700;
@@ -388,8 +388,7 @@ section {
         margin-right: 180px; }
         @media (min-width: 0) and (max-width: 512px) {
           .prize .wrapper .flex-container .text-1 {
-            display: none;
-            margin-right: 0; } }
+            display: none; } }
       .prize .wrapper .flex-container .text-2 {
         margin-top: -50px;
         margin-left: 70px; }
@@ -399,7 +398,8 @@ section {
           .prize .wrapper .flex-container .text-2 p {
             font-size: 14px;
             font-weight: 400;
-            margin-left: 0; } }
+            margin-right: 50px;
+            margin-left: -50px; } }
     .prize .wrapper .btn {
       display: none;
       text-align: center;
