--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -123,7 +123,7 @@
                 max-width: 420px;
                 margin-top: -70px;
                 @include mq(0,512px){
-                    max-width: 300px;
+                    width: 300px;
                 }
                 p{
                     font-size: 20px;
@@ -139,7 +139,6 @@
                 margin-right: 180px;
                 @include mq(0,512px){
                     display: none;
-                    margin-right: 0;
                 }
             }
             .text-2{
@@ -152,7 +151,8 @@
                     @include mq(0,512px){
                         font-size: 14px;
                         font-weight: 400;
-                        margin-left: 0;
+                        margin-right: 50px;
+                        margin-left: -50px;
                     }
                 }
             }
