Add login js Sof

--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -172,5 +172,18 @@
                 left: 30%;
             }
         }
+        #login{
+            position: absolute;
+            display: none;
+            width: 100vw;
+            height: 100vh;
+            img{
+                width: 300px;
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                top: 15%;
+            }
+        }
     }
 }
