--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -177,6 +177,7 @@
             display: none;
             width: 100vw;
             height: 100vh;
+            z-index: 3;
             img{
                 width: 300px;
                 position: absolute;
