--- a/style/css/main.css
+++ b/style/css/main.css
@@ -418,7 +418,8 @@ section {
       position: absolute;
       display: none;
       width: 100vw;
-      height: 100vh; }
+      height: 100vh;
+      z-index: 3; }
       .prize .wrapper #login img {
         width: 300px;
         position: absolute;
