--- a/scss/_announc.scss
+++ b/scss/_announc.scss
@@ -12,7 +12,7 @@
         background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
         width: 100%;
         overflow: hidden;
-        height: 100vh;
+        // height: 100vh;
     }
     .wrapper{
         position: relative;
