--- a/style/css/main.css
+++ b/style/css/main.css
@@ -224,8 +224,7 @@ section {
     .announcement {
       background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
       width: 100%;
-      overflow: hidden;
-      height: 100vh; } }
+      overflow: hidden; } }
   .announcement .wrapper {
     position: relative;
     top: 50%;
