--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -14,7 +14,7 @@
         height: 100vh;
         @include mq(0,512px){
             max-width: 340px;
-            height: 100%;
+            // height: 100%;
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
