--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -12,6 +12,7 @@ section {
     // max-width: 1280px;
     margin:0 auto;
     height: 100%;
+    width: 100%;
 }
 .flex-container{
     display: flex;
