--- a/style/css/main.css
+++ b/style/css/main.css
@@ -64,7 +64,8 @@ section {
 
 .wrapper {
   margin: 0 auto;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 .flex-container {
   display: flex;
