--- a/style/css/main.css
+++ b/style/css/main.css
@@ -60,12 +60,12 @@ body {
   font-family: 'Azo Sans'; }
 
 section {
-  padding: 0 2%; }
+  padding: 0 2%;
+  width: 100%; }
 
 .wrapper {
   margin: 0 auto;
-  height: 100%;
-  width: 100%; }
+  height: 100%; }
 
 .flex-container {
   display: flex;
