--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -30,6 +30,9 @@ section {
     padding: 20px 60px;
     font-weight: 700;
     transition: all 0.2s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    all: unset;
     &:hover{
         background-color: $crava;
     }
