--- a/style/css/main.css
+++ b/style/css/main.css
@@ -80,7 +80,10 @@ section {
   border-radius: 15px;
   padding: 20px 60px;
   font-weight: 700;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  all: unset; }
   .btn:hover {
     background-color: #FF1B6A; }
   @media (min-width: 0) and (max-width: 512px) {
@@ -276,7 +279,8 @@ section {
     .prize {
       background: linear-gradient(180deg, #010f45 25%, #3b8ccc 99%);
       width: 100%;
-      overflow: hidden; } }
+      overflow: hidden;
+      height: 100%; } }
   .prize .wrapper {
     max-width: 1100px;
     height: 100vh; }
@@ -417,6 +421,14 @@ section {
       width: 100vw;
       height: 100vh;
       z-index: 3; }
+      .prize .wrapper #login i {
+        font-size: 30px;
+        color: #ffffff;
+        z-index: 4;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 10%; }
       .prize .wrapper #login img {
         width: 300px;
         position: absolute;
@@ -436,7 +448,10 @@ section {
       overflow: hidden;
       height: 1900px;
       background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/bg-home-mobile.jpg");
-      text-align: center; } }
+      text-align: center;
+      position: relative;
+      top: -2px;
+      z-index: -1; } }
   .about .wrapper {
     max-width: 1280px; }
     @media (min-width: 0) and (max-width: 512px) {
