--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -125,6 +125,7 @@
             background-color: $crava-light;
             font-size: 16px;
             cursor: pointer;
+            -webkit-appearance: none;
             &:hover{
                 background-color: $crava;
             }
