--- a/style/css/main.css
+++ b/style/css/main.css
@@ -80,10 +80,7 @@ section {
   border-radius: 15px;
   padding: 20px 60px;
   font-weight: 700;
-  transition: all 0.2s;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  all: unset; }
+  transition: all 0.2s; }
   .btn:hover {
     background-color: #FF1B6A; }
   @media (min-width: 0) and (max-width: 512px) {
@@ -207,7 +204,8 @@ section {
       color: white;
       background-color: #FF538F;
       font-size: 16px;
-      cursor: pointer; }
+      cursor: pointer;
+      -webkit-appearance: none; }
       .hero form input.btn:hover {
         background-color: #FF1B6A; }
       @media (min-width: 0) and (max-width: 512px) {
