--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -126,6 +126,7 @@
             font-size: 16px;
             cursor: pointer;
             -webkit-appearance: none;
+            vertical-align: middle;
             &:hover{
                 background-color: $crava;
             }
