Update btn hero Sof

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -206,7 +206,7 @@ section {
       font-size: 16px;
       cursor: pointer;
       -webkit-appearance: none;
-      vertical-align: middle; }
+      padding: 5px 10px; }
       .hero form input.btn:hover {
         background-color: #FF1B6A; }
       @media (min-width: 0) and (max-width: 512px) {
