--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -126,7 +126,7 @@
             font-size: 16px;
             cursor: pointer;
             -webkit-appearance: none;
-            vertical-align: middle;
+            padding: 5px 10px;
             &:hover{
                 background-color: $crava;
             }
