--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -6,7 +6,7 @@
         background: linear-gradient(180deg, rgba(1,15,69,1) 25%, rgba(59,140,204,1) 99%);
         width: 100%;
         overflow: hidden;
-        height: 100%;
+        height: 100vh;
     }
     display:none;
     .wrapper{
