--- a/style/css/main.css
+++ b/style/css/main.css
@@ -279,7 +279,7 @@ section {
       background: linear-gradient(180deg, #010f45 25%, #3b8ccc 99%);
       width: 100%;
       overflow: hidden;
-      height: 100%; } }
+      height: 100vh; } }
   .prize .wrapper {
     max-width: 1100px;
     height: 100vh; }
