--- a/style/css/main.css
+++ b/style/css/main.css
@@ -413,7 +413,8 @@ section {
           font-size: 14px;
           font-weight: 700;
           line-height: 17px;
-          left: 30%; } }
+          left: 30%;
+          bottom: 20px; } }
     .prize .wrapper #login {
       position: absolute;
       display: none;
