--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -170,6 +170,7 @@
                 font-weight: 700;
                 line-height: 17px;
                 left: 30%;
+                bottom: 20px;
             }
         }
         #login{
