--- a/style/css/main.css
+++ b/style/css/main.css
@@ -271,7 +271,7 @@ section {
 
 .prize {
   background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
-  height: 100vh;
+  height: 100%;
   display: none;
   display: none; }
   @media (min-width: 0) and (max-width: 512px) {
@@ -279,7 +279,7 @@ section {
       background: linear-gradient(180deg, #010f45 25%, #3b8ccc 99%);
       width: 100%;
       overflow: hidden;
-      height: 100vh; } }
+      height: 100%; } }
   .prize .wrapper {
     max-width: 1100px;
     height: 100vh; }
