--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -1,6 +1,6 @@
 .prize{
     background: linear-gradient(180deg, rgba(21,20,72,1) 25%, rgba(59,140,204,1) 99%);
-    height: 100%;
+    height: 100vh;
     display:none;
     @include mq(0,512px){
         background: linear-gradient(180deg, rgba(1,15,69,1) 25%, rgba(59,140,204,1) 99%);
@@ -170,7 +170,6 @@
                 font-weight: 700;
                 line-height: 17px;
                 left: 30%;
-                bottom: 40px;
             }
         }
         #login{
