--- a/style/css/main.css
+++ b/style/css/main.css
@@ -271,7 +271,7 @@ section {
 
 .prize {
   background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
-  height: 100%;
+  height: 100vh;
   display: none;
   display: none; }
   @media (min-width: 0) and (max-width: 512px) {
@@ -413,8 +413,7 @@ section {
           font-size: 14px;
           font-weight: 700;
           line-height: 17px;
-          left: 30%;
-          bottom: 40px; } }
+          left: 30%; } }
     .prize .wrapper #login {
       position: absolute;
       display: none;
