Update btn prizes Sof

--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -170,6 +170,8 @@
                 font-weight: 700;
                 line-height: 17px;
                 left: 30%;
+                bottom: 70px;
+
             }
         }
         #login{
