--- a/style/css/main.css
+++ b/style/css/main.css
@@ -279,7 +279,7 @@ section {
       background: linear-gradient(180deg, #010f45 25%, #3b8ccc 99%);
       width: 100%;
       overflow: hidden;
-      height: 100%; } }
+      height: 100vh; } }
   .prize .wrapper {
     max-width: 1100px;
     height: 100vh; }
@@ -414,7 +414,7 @@ section {
           font-weight: 700;
           line-height: 17px;
           left: 30%;
-          bottom: 70px; } }
+          bottom: 50px; } }
     .prize .wrapper #login {
       position: absolute;
       display: none;
@@ -469,7 +469,7 @@ section {
         .about .wrapper h2 {
           font-size: 45px;
           margin-bottom: 30px;
-          padding-top: 10px;
+          padding-top: 20px;
           line-height: 55px;
           width: 300px;
           position: relative;
